[gd_scene load_steps=7 format=3 uid="uid://baw5ofuy3pojv"]

[ext_resource type="Script" path="res://Tower/Teleporter.gd" id="2_1dmra"]
[ext_resource type="Texture2D" uid="uid://bcjlf0gljhub3" path="res://gamemap/Capture.PNG" id="2_2stl8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jv8mv"]
texture = ExtResource("2_2stl8")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0

[sub_resource type="TileSet" id="TileSet_jqmeu"]
sources/0 = SubResource("TileSetAtlasSource_jv8mv")

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7cqt5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dhx8x"]
size = Vector2(38, 7)

[node name="Tower_Space" type="Node2D"]
scale = Vector2(10, 10)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -131.0
offset_top = -102.0
offset_right = -21.0
offset_bottom = -44.0
text = "Tower space"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_jqmeu")
format = 2
layer_0/tile_data = PackedInt32Array(-458762, 0, 0, -393226, 0, 1, -327690, 0, 2, -262154, 0, 3, -196618, 0, 4, -458761, 65536, 0, -458760, 131072, 0, -458759, 196608, 0, -131082, 0, 0, -65546, 0, 1, -10, 0, 2, 65526, 0, 3, 131062, 0, 4, 196598, 0, 0, 262134, 0, 1, 327670, 0, 2, 393206, 0, 3, 458742, 0, 4, 524278, 0, 0, 524279, 65536, 0, 524280, 131072, 0, 524281, 196608, 0, -458758, 0, 0, -458757, 65536, 0, -458756, 131072, 0, -458755, 196608, 0, 524282, 0, 0, 524283, 65536, 0, 524284, 131072, 0, 524285, 196608, 0, -458754, 0, 0, -458753, 65536, 0, -524288, 131072, 0, -524287, 196608, 0, 524286, 0, 0, 524287, 65536, 0, 458752, 131072, 0, 458753, 196608, 0, -524286, 0, 0, -524285, 65536, 0, -524284, 131072, 0, -524283, 196608, 0, 458754, 0, 0, 458755, 65536, 0, 458756, 131072, 0, 458757, 196608, 0, -524282, 0, 0, -524281, 65536, 0, -524280, 131072, 0, -524279, 196608, 0, -458743, 196608, 1, -393207, 196608, 2, -327671, 196608, 3, -262135, 196608, 4, -196599, 196608, 0, -131063, 196608, 1, -65527, 196608, 2, 9, 196608, 3, 65545, 196608, 4, 131081, 196608, 0, 196617, 196608, 1, 262153, 196608, 2, 327689, 196608, 3, 393225, 196608, 4, 458758, 0, 0, 458759, 65536, 0, 458760, 131072, 0, 458761, 196608, 0)

[node name="StaticBody2D" type="StaticBody2D" parent="TileMap"]
physics_material_override = SubResource("PhysicsMaterial_7cqt5")

[node name="MapArea" type="CollisionPolygon2D" parent="TileMap/StaticBody2D"]
build_mode = 1
polygon = PackedVector2Array(18, -122, -20, -122, -20, -112, -45, -112, -144, -112, -144, 112, 144, 112, 144, -112, 18, -112)

[node name="Teleporter" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("2_1dmra")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teleporter"]
position = Vector2(-1, -118.5)
shape = SubResource("RectangleShape2D_dhx8x")

[connection signal="area_entered" from="Teleporter" to="Teleporter" method="_on_area_entered"]
[connection signal="body_entered" from="Teleporter" to="Teleporter" method="_on_body_entered"]
