[gd_scene load_steps=21 format=3 uid="uid://rhsiplt44huo"]

[ext_resource type="Texture2D" uid="uid://dwl87x2ghn2y8" path="res://Art/mystic_woods_free_2.1/sprites/tilesets/woodFloor.png" id="1_4f1c3"]
[ext_resource type="Texture2D" uid="uid://bi0avchojxi7f" path="res://Art/mystic_woods_free_2.1/sprites/tilesets/grass.png" id="2_7ameh"]
[ext_resource type="Script" path="res://Tower/Teleporter.gd" id="2_30gnf"]
[ext_resource type="Texture2D" uid="uid://c032dqyl8b2xx" path="res://Art/mystic_woods_free_2.1/sprites/tilesets/walls/walls.png" id="3_ikopq"]
[ext_resource type="Texture2D" uid="uid://du5srv4rstca8" path="res://Art/mystic_woods_free_2.1/sprites/tilesets/plains.png" id="4_jha1p"]
[ext_resource type="Texture2D" uid="uid://d0p7w83kd5lfx" path="res://Art/mystic_woods_free_2.1/sprites/tilesets/floors/wooden.png" id="5_ndfxe"]
[ext_resource type="Script" path="res://gamemap/generativeMap.gd" id="13_xwakj"]
[ext_resource type="Texture2D" uid="uid://dbfib1q8sdb3a" path="res://Art/2D Pixel Dungeon Asset Pack/interface/arrow_1.png" id="14_ygak8"]
[ext_resource type="Texture2D" uid="uid://blu7600k2im73" path="res://Art/2D Pixel Dungeon Asset Pack/interface/arrow_2.png" id="15_le24w"]
[ext_resource type="Texture2D" uid="uid://bjyas88gc8v21" path="res://Art/2D Pixel Dungeon Asset Pack/interface/arrow_3.png" id="16_d1pop"]
[ext_resource type="Texture2D" uid="uid://ou61na7ajbkx" path="res://Art/2D Pixel Dungeon Asset Pack/interface/arrow_4.png" id="17_828kl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rj332"]
texture = ExtResource("1_4f1c3")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ceacj"]
texture = ExtResource("2_7ameh")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2lg6w"]
texture = ExtResource("3_ikopq")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/next_alternative_id = 4
5:0/0 = 0
5:0/1 = 1
0:1/0 = 0
1:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:0/0 = 0
7:0/0 = 0
4:2/0 = 0
5:2/0 = 0
6:1/0 = 0
7:1/0 = 0
6:2/0 = 0
5:3/0 = 0
4:3/0 = 0
7:2/0 = 0
7:3/0 = 0
6:3/0 = 0
7:4/0 = 0
7:5/0 = 0
6:5/0 = 0
6:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j6y33"]
texture = ExtResource("4_jha1p")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n4w4c"]
texture = ExtResource("5_ndfxe")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_8cslt"]
sources/0 = SubResource("TileSetAtlasSource_rj332")
sources/1 = SubResource("TileSetAtlasSource_ceacj")
sources/2 = SubResource("TileSetAtlasSource_2lg6w")
sources/3 = SubResource("TileSetAtlasSource_j6y33")
sources/4 = SubResource("TileSetAtlasSource_n4w4c")

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7cqt5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtdqw"]
size = Vector2(37.7, 7.29999)

[sub_resource type="SpriteFrames" id="SpriteFrames_2l7r3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_ygak8")
}, {
"duration": 1.0,
"texture": ExtResource("15_le24w")
}, {
"duration": 1.0,
"texture": ExtResource("16_d1pop")
}, {
"duration": 1.0,
"texture": ExtResource("17_828kl")
}],
"loop": true,
"name": &"Point",
"speed": 4.0
}]

[node name="Game_Space" type="Node2D"]
scale = Vector2(10, 10)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_8cslt")
format = 2
layer_0/name = "Interrior Floor"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(-393225, 4, 0, -327689, 4, 0, -262153, 4, 0, -196617, 4, 0, -131081, 4, 0, -65545, 4, 0, -9, 4, 0, 65527, 4, 0, 131063, 4, 0, 196599, 4, 0, 262135, 4, 0, 327671, 4, 0, 393207, 4, 0, 458743, 4, 0, -393224, 4, 0, -327688, 4, 0, -262152, 4, 0, -196616, 4, 0, -131080, 4, 0, -65544, 4, 0, -8, 4, 0, 65528, 4, 0, 131064, 4, 0, 196600, 4, 0, 262136, 4, 0, 327672, 4, 0, 393208, 4, 0, 458744, 4, 0, -393223, 4, 0, -327687, 4, 0, -262151, 4, 0, -196615, 4, 0, -131079, 4, 0, -65543, 4, 0, -7, 4, 0, 65529, 4, 0, 131065, 4, 0, 196601, 4, 0, 262137, 4, 0, 327673, 4, 0, 393209, 4, 0, 458745, 4, 0, -393222, 4, 0, -327686, 4, 0, -262150, 4, 0, -196614, 4, 0, -131078, 4, 0, -65542, 4, 0, -6, 4, 0, 65530, 4, 0, 131066, 4, 0, 196602, 4, 0, 262138, 4, 0, 327674, 4, 0, 393210, 4, 0, 458746, 4, 0, -393221, 4, 0, -327685, 4, 0, -262149, 4, 0, -196613, 4, 0, -131077, 4, 0, -65541, 4, 0, -5, 4, 0, 65531, 4, 0, 131067, 4, 0, 196603, 4, 0, 262139, 4, 0, 327675, 4, 0, 393211, 4, 0, 458747, 4, 0, -393220, 4, 0, -327684, 4, 0, -262148, 4, 0, -196612, 4, 0, -131076, 4, 0, -65540, 4, 0, -4, 4, 0, 65532, 4, 0, 131068, 4, 0, 196604, 4, 0, 262140, 4, 0, 327676, 4, 0, 393212, 4, 0, 458748, 4, 0, -393219, 4, 0, -327683, 4, 0, -262147, 4, 0, -196611, 4, 0, -131075, 4, 0, -65539, 4, 0, -3, 4, 0, 65533, 4, 0, 131069, 4, 0, 196605, 4, 0, 262141, 4, 0, 327677, 4, 0, 393213, 4, 0, 458749, 4, 0, -393218, 4, 0, -327682, 4, 0, -262146, 4, 0, -196610, 4, 0, -131074, 4, 0, -65538, 4, 0, -2, 4, 0, 65534, 4, 0, 131070, 4, 0, 196606, 4, 0, 262142, 4, 0, 327678, 4, 0, 393214, 4, 0, 458750, 4, 0, -393217, 4, 0, -327681, 4, 0, -262145, 4, 0, -196609, 4, 0, -131073, 4, 0, -65537, 4, 0, -1, 4, 0, 65535, 4, 0, 131071, 4, 0, 196607, 4, 0, 262143, 4, 0, 327679, 4, 0, 393215, 4, 0, 458751, 4, 0, -458752, 4, 0, -393216, 4, 0, -327680, 4, 0, -262144, 4, 0, -196608, 4, 0, -131072, 4, 0, -65536, 4, 0, 0, 4, 0, 65536, 4, 0, 131072, 4, 0, 196608, 4, 0, 262144, 4, 0, 327680, 4, 0, 393216, 4, 0, -458751, 4, 0, -393215, 4, 0, -327679, 4, 0, -262143, 4, 0, -196607, 4, 0, -131071, 4, 0, -65535, 4, 0, 1, 4, 0, 65537, 4, 0, 131073, 4, 0, 196609, 4, 0, 262145, 4, 0, 327681, 4, 0, 393217, 4, 0, -458750, 4, 0, -393214, 4, 0, -327678, 4, 0, -262142, 4, 0, -196606, 4, 0, -131070, 4, 0, -65534, 4, 0, 2, 4, 0, 65538, 4, 0, 131074, 4, 0, 196610, 4, 0, 262146, 4, 0, 327682, 4, 0, 393218, 4, 0, -458749, 4, 0, -393213, 4, 0, -327677, 4, 0, -262141, 4, 0, -196605, 4, 0, -131069, 4, 0, -65533, 4, 0, 3, 4, 0, 65539, 4, 0, 131075, 4, 0, 196611, 4, 0, 262147, 4, 0, 327683, 4, 0, 393219, 4, 0, -458748, 4, 0, -393212, 4, 0, -327676, 4, 0, -262140, 4, 0, -196604, 4, 0, -131068, 4, 0, -65532, 4, 0, 4, 4, 0, 65540, 4, 0, 131076, 4, 0, 196612, 4, 0, 262148, 4, 0, 327684, 4, 0, 393220, 4, 0, -458747, 4, 0, -393211, 4, 0, -327675, 4, 0, -262139, 4, 0, -196603, 4, 0, -131067, 4, 0, -65531, 4, 0, 5, 4, 0, 65541, 4, 0, 131077, 4, 0, 196613, 4, 0, 262149, 4, 0, 327685, 4, 0, 393221, 4, 0, -458746, 4, 0, -393210, 4, 0, -327674, 4, 0, -262138, 4, 0, -196602, 4, 0, -131066, 4, 0, -65530, 4, 0, 6, 4, 0, 65542, 4, 0, 131078, 4, 0, 196614, 4, 0, 262150, 4, 0, 327686, 4, 0, 393222, 4, 0, -458745, 4, 0, -393209, 4, 0, -327673, 4, 0, -262137, 4, 0, -196601, 4, 0, -131065, 4, 0, -65529, 4, 0, 7, 4, 0, 65543, 4, 0, 131079, 4, 0, 196615, 4, 0, 262151, 4, 0, 327687, 4, 0, 393223, 4, 0, -458744, 4, 0, -393208, 4, 0, -327672, 4, 0, -262136, 4, 0, -196600, 4, 0, -131064, 4, 0, -65528, 4, 0, 8, 4, 0, 65544, 4, 0, 131080, 4, 0, 196616, 4, 0, 262152, 4, 0, 327688, 4, 0, 393224, 4, 0, 524287, 4, 0, 458752, 4, 0)
layer_1/name = "ExteriorFloor"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(-393225, 131075, 5, -327689, 131075, 5, -262153, 131075, 5, -196617, 131075, 5, -131081, 131075, 5, -65545, 131075, 5, -9, 131075, 5, 65527, 131075, 5, 131063, 131075, 5, 196599, 131075, 5, 262135, 131075, 5, 327671, 131075, 5, 393207, 131075, 5, 458743, 131075, 5, -393224, 131075, 5, -327688, 131075, 5, -262152, 131075, 5, -196616, 131075, 5, -131080, 131075, 5, -65544, 131075, 5, -8, 131075, 5, 65528, 131075, 5, 131064, 131075, 5, 196600, 131075, 5, 262136, 131075, 5, 327672, 131075, 5, 393208, 131075, 5, 458744, 131075, 5, -393223, 131075, 5, -327687, 131075, 5, -262151, 131075, 5, -196615, 131075, 5, -131079, 131075, 5, -65543, 131075, 5, -7, 131075, 5, 65529, 131075, 5, 131065, 131075, 5, 196601, 131075, 5, 262137, 131075, 5, 327673, 131075, 5, 393209, 131075, 5, 458745, 131075, 5, -393222, 131075, 5, -327686, 131075, 5, -262150, 131075, 5, -196614, 131075, 5, -131078, 131075, 5, -65542, 131075, 5, -6, 131075, 5, 65530, 131075, 5, 131066, 131075, 5, 196602, 131075, 5, 262138, 131075, 5, 327674, 131075, 5, 393210, 131075, 5, 458746, 131075, 5, -393221, 131075, 5, -327685, 131075, 5, -262149, 131075, 5, -196613, 131075, 5, -131077, 131075, 5, -65541, 131075, 5, -5, 131075, 5, 65531, 131075, 5, 131067, 131075, 5, 196603, 131075, 5, 262139, 131075, 5, 327675, 131075, 5, 393211, 131075, 5, 458747, 131075, 5, -393220, 131075, 5, -327684, 131075, 5, -262148, 131075, 5, -196612, 131075, 5, -131076, 131075, 5, -65540, 131075, 5, -4, 131075, 5, 65532, 131075, 5, 131068, 131075, 5, 196604, 131075, 5, 262140, 131075, 5, 327676, 131075, 5, 393212, 131075, 5, 458748, 131075, 5, -393219, 131075, 5, -327683, 131075, 5, -262147, 131075, 5, -196611, 131075, 5, -131075, 131075, 5, -65539, 131075, 5, -3, 131075, 5, 65533, 131075, 5, 131069, 131075, 5, 196605, 131075, 5, 262141, 131075, 5, 327677, 131075, 5, 393213, 131075, 5, 458749, 131075, 5, -393218, 131075, 5, -327682, 131075, 5, -262146, 131075, 5, -196610, 131075, 5, -131074, 131075, 5, -65538, 131075, 5, -2, 131075, 5, 65534, 131075, 5, 131070, 131075, 5, 196606, 131075, 5, 262142, 131075, 5, 327678, 131075, 5, 393214, 131075, 5, 458750, 131075, 5, -393217, 131075, 5, -327681, 131075, 5, -262145, 131075, 5, -196609, 131075, 5, -131073, 131075, 5, -65537, 131075, 5, -1, 131075, 5, 65535, 131075, 5, 131071, 131075, 5, 196607, 131075, 5, 262143, 131075, 5, 327679, 131075, 5, 393215, 131075, 5, 458751, 131075, 5, -458752, 131075, 5, -393216, 131075, 5, -327680, 131075, 5, -262144, 131075, 5, -196608, 131075, 5, -131072, 131075, 5, -65536, 131075, 5, 0, 131075, 5, 65536, 131075, 5, 131072, 131075, 5, 196608, 131075, 5, 262144, 131075, 5, 327680, 131075, 5, 393216, 131075, 5, -458751, 131075, 5, -393215, 131075, 5, -327679, 131075, 5, -262143, 131075, 5, -196607, 131075, 5, -131071, 131075, 5, -65535, 131075, 5, 1, 131075, 5, 65537, 131075, 5, 131073, 131075, 5, 196609, 131075, 5, 262145, 131075, 5, 327681, 131075, 5, 393217, 131075, 5, -458750, 131075, 5, -393214, 131075, 5, -327678, 131075, 5, -262142, 131075, 5, -196606, 131075, 5, -131070, 131075, 5, -65534, 131075, 5, 2, 131075, 5, 65538, 131075, 5, 131074, 131075, 5, 196610, 131075, 5, 262146, 131075, 5, 327682, 131075, 5, 393218, 131075, 5, -458749, 131075, 5, -393213, 131075, 5, -327677, 131075, 5, -262141, 131075, 5, -196605, 131075, 5, -131069, 131075, 5, -65533, 131075, 5, 3, 131075, 5, 65539, 131075, 5, 131075, 131075, 5, 196611, 131075, 5, 262147, 131075, 5, 327683, 131075, 5, 393219, 131075, 5, -458748, 131075, 5, -393212, 131075, 5, -327676, 131075, 5, -262140, 131075, 5, -196604, 131075, 5, -131068, 131075, 5, -65532, 131075, 5, 4, 131075, 5, 65540, 131075, 5, 131076, 131075, 5, 196612, 131075, 5, 262148, 131075, 5, 327684, 131075, 5, 393220, 131075, 5, -458747, 131075, 5, -393211, 131075, 5, -327675, 131075, 5, -262139, 131075, 5, -196603, 131075, 5, -131067, 131075, 5, -65531, 131075, 5, 5, 131075, 5, 65541, 131075, 5, 131077, 131075, 5, 196613, 131075, 5, 262149, 131075, 5, 327685, 131075, 5, 393221, 131075, 5, -458746, 131075, 5, -393210, 131075, 5, -327674, 131075, 5, -262138, 131075, 5, -196602, 131075, 5, -131066, 131075, 5, -65530, 131075, 5, 6, 131075, 5, 65542, 131075, 5, 131078, 131075, 5, 196614, 131075, 5, 262150, 131075, 5, 327686, 131075, 5, 393222, 131075, 5, -458745, 131075, 5, -393209, 131075, 5, -327673, 131075, 5, -262137, 131075, 5, -196601, 131075, 5, -131065, 131075, 5, -65529, 131075, 5, 7, 131075, 5, 65543, 131075, 5, 131079, 131075, 5, 196615, 131075, 5, 262151, 131075, 5, 327687, 131075, 5, 393223, 131075, 5, -458744, 131075, 5, -393208, 131075, 5, -327672, 131075, 5, -262136, 131075, 5, -196600, 131075, 5, -131064, 131075, 5, -65528, 131075, 5, 8, 131075, 5, 65544, 131075, 5, 131080, 131075, 5, 196616, 131075, 5, 262152, 131075, 5, 327688, 131075, 5, 393224, 131075, 5, 524287, 131075, 5, 458752, 131075, 5)
layer_2/name = "InteriorWall"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(-458762, 262146, 0, -524279, 327682, 0, -458743, 65538, 1, -393207, 65538, 1, -327671, 65538, 1, -262135, 65538, 1, -196599, 65538, 1, -131063, 65538, 1, -65527, 65538, 1, 9, 65538, 1, 65545, 65538, 1, 131081, 65538, 1, 196617, 65538, 1, 262153, 65538, 1, 327689, 65538, 1, 393225, 65538, 1, -524280, 131074, 2, -524281, 131074, 2, -524282, 131074, 2, -524283, 131074, 2, -524284, 131074, 2, -524285, 131074, 2, -524286, 131074, 2, -524287, 131074, 2, -524288, 131074, 2, -458753, 131074, 2, -458754, 131074, 2, -458755, 131074, 2, -458756, 131074, 2, -458757, 131074, 2, -458758, 131074, 2, -458759, 131074, 2, -458760, 131074, 2, -458761, 131074, 2, -393226, 196610, 1, -327690, 196610, 1, -262154, 196610, 1, -196618, 196610, 1, -131082, 196610, 1, -65546, 196610, 1, -10, 196610, 1, 65526, 196610, 1, 131062, 196610, 1, 196598, 196610, 1, 262134, 196610, 1, 327670, 196610, 1, 393206, 196610, 1, 458742, 196610, 1, 524279, 2, 1, 524280, 2, 1, 524281, 2, 1, 524282, 2, 1, 524283, 2, 1, 524284, 2, 1, 524285, 2, 1, 458754, 2, 1, 458755, 2, 1, 458756, 2, 1, 458757, 2, 1, 458758, 2, 1, 458759, 2, 1, 458760, 2, 1, 458761, 2, 1, 524290, 2, 1, 524289, 2, 1, 524288, 2, 1, 589823, 2, 1, 589822, 2, 1, 524286, 2, 1, 458753, 2, 1, 524278, 2, 1)
layer_3/name = "ExteriorWall"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array(458761, 196611, 6, 458760, 131075, 6, 458759, 131075, 6, 458758, 131075, 6, 458757, 131075, 6, 458756, 131075, 6, 458755, 131075, 6, 458754, 131075, 6, 458753, 262147, 4, 524289, 196611, 6, 524288, 131075, 6, 589823, 131075, 6, 589822, 65539, 6, 524286, 327683, 4, -458743, 196611, 5, -393207, 196611, 5, -327671, 196611, 5, -262135, 196611, 5, -196599, 196611, 5, -131063, 196611, 5, -65527, 196611, 5, 9, 196611, 5, 65545, 196611, 5, 131081, 196611, 5, 196617, 196611, 5, 262153, 196611, 5, 327689, 196611, 5, 393225, 196611, 5, -393226, 65539, 5, -327690, 65539, 5, -262154, 65539, 5, -196618, 65539, 5, -131082, 65539, 5, -65546, 65539, 5, -10, 65539, 5, 65526, 65539, 5, 131062, 65539, 5, 196598, 65539, 5, 262134, 65539, 5, 327670, 65539, 5, 393206, 65539, 5, 458742, 65539, 5, -458761, 131075, 4, -458760, 131075, 4, -458759, 131075, 4, -458758, 131075, 4, -458757, 131075, 4, -458756, 131075, 4, -458755, 131075, 4, -458754, 131075, 4, -458753, 131075, 4, -524288, 131075, 4, -524287, 131075, 4, -524286, 131075, 4, -524285, 131075, 4, -524284, 131075, 4, -524283, 131075, 4, -524282, 131075, 4, -524281, 131075, 4, -524280, 131075, 4, -458762, 65539, 4, -524279, 196611, 4, 524278, 65539, 6, 524279, 131075, 6, 524280, 131075, 6, 524281, 131075, 6, 524282, 131075, 6, 524283, 131075, 6, 524284, 131075, 6, 524285, 131075, 6)
script = ExtResource("13_xwakj")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_7cqt5")

[node name="MapArea" type="CollisionPolygon2D" parent="StaticBody2D"]
build_mode = 1
polygon = PackedVector2Array(17.7, 129, -19.7, 128.9, -20, 112, -45, 112, -144, 112, -144, -112, 144, -112, 144, 112, 18, 112)

[node name="Teleporter" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("2_30gnf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teleporter"]
position = Vector2(-0.9, 125.1)
shape = SubResource("RectangleShape2D_gtdqw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.1, 116.5)
sprite_frames = SubResource("SpriteFrames_2l7r3")
animation = &"Point"
autoplay = "Point"

[connection signal="body_entered" from="Teleporter" to="Teleporter" method="_on_body_entered"]
